[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meo-cli"
version = "0.2.0"
description = "CLI client for the MEO social media database"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "keyring>=24",
    "platformdirs>=4",
    "tomli>=2;python_version<'3.11'",
    "tomli-w>=1",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
meo = "meo_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["meo_cli"]
